--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -182,7 +182,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -466,7 +466,7 @@ data-ad-slot="3830899615">
 <p>Giống như ví thường, ta chỉ nên để trong ví-điện-tử một số tiền vừa đủ cho những khoản tiêu-vặt trong vài ngày, khi tiêu hết hoặc khi quyết định mua một món gì cần nhiều tiền hơn thì ta lại cho thêm tiền vào.<br>
 Khi bạn bị mất ví thường thì <a href="https://vi.wikipedia.org/wiki/X%C3%A1c_su%E1%BA%A5t" target='_blank'>xác-suất</a> của việc bạn mất hết tiền trong ví và phải mua cái ví mới là gần 100%. Chỉ có rất ít trường hợp ví của bạn được người tốt bụng tìm thấy và trong ví có một mẩu giấy ghi tên và số điện thoại của bạn (<a href="https://vi.wikipedia.org/wiki/Danh_thi%E1%BA%BFp" target='_blank'>danh-thiếp</a>) để người tốt bụng gọi cho bạn.<br>
 Ví-điện-tử nằm trong một smartphone, khi smartphone bị mất thì xác-suất của việc mua smartphone mới là gần 100% nhưng xác-suất của việc bạn bị mất tiền trong ví-điện-tử là gần 0%. Tiền trong ví-điện-tử được bảo-vệ bằng mật-khẩu do bạn đặt, nếu smartphone có khả năng đọc dấu-vân-tay thì ví-điện-tử cũng được bảo-vệ bằng dấu-vân-tay của bạn. Khi không có mật-khẩu và dấu-vân-tay của bạn thì không ai lấy được tiền trong ví-điện-tử. Bạn chỉ cần cài app ví-điện-tử trên một smartphone khác và login vào với số-điện-thoại đã dùng cho ví thì số tiền sẽ hiện ra y như trước.</p>
-<p>Về mặt kỹ-thuật thì tiền trong ví-điện-tử khó bị mất, nhưng bạn cần phải sáng-suốt tránh bị lừa mất tiền. Kẻ-gian luôn-luôn tìm cách lừa người khác để lấy tiền, dù cho tiền đó là tiền-mặt, tiền trong ngân-hàng, vàng trong tủ hay tiền trong ví-điện-tử. Mật-khẩu của ví-điện-tử hay tài-khoản giao-dịch ngân-hàng điện-tử tương-đương với chìa-khoá của tủ-tiền, hộp-tiền của bạn. Đừng bao giờ đưa mật-khẩu cho bất kỳ người nào, kể cả người của ngân-hàng hay công ty ví-điện-tử. Bạn nên đọc thêm bài viết về những cách <a href="protect.html">bảo-vệ tài-sản kỹ-thuật-số</a>.</p>
+<p>Về mặt kỹ-thuật thì tiền trong ví-điện-tử khó bị mất, nhưng bạn cần phải sáng-suốt tránh bị lừa mất tiền. Kẻ-gian luôn-luôn tìm cách lừa người khác để lấy tiền, dù cho tiền đó là tiền-mặt, tiền trong ngân-hàng, vàng trong tủ hay tiền trong ví-điện-tử. Mật-khẩu của ví-điện-tử hay tài-khoản giao-dịch ngân-hàng điện-tử tương-đương với chìa-khoá của tủ-tiền, hộp-tiền của bạn. Đừng bao giờ đưa mật-khẩu cho bất kỳ người nào, kể cả người của ngân-hàng hay công ty ví-điện-tử. Bạn nên đọc thêm bài viết về những cách <a href="protect">bảo-vệ tài-sản kỹ-thuật-số</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -507,7 +507,7 @@ Hệ-thống-thanh-toán QR phổ biến nhất ở Việt-Nam là của <a href
 <br>
 Các app của các ngân-hàng thường có chức-năng QR Payment. QR Payment tương đương như một cái thẻ debit liên kết với tài-khoản-ngân-hàng. Một số ngân-hàng (MSB, Vietcombank, TPBank, VPBank) tạo QR-code của tài-khoản-ngân-hàng trong app để người khác scan và gửi tiền vào tài-khoản-ngân-hàng đó nhanh chóng và tiện lợi như các ví-điện-tử ở trên. Nếu không có QR-code thì người dùng QR Payment không thể nhận tiền như ví-điện-tử.</p>
 <h1>Pi Network</h1>
-<p>Dự án <a href="pi-network.html">Pi Network</a> đang phát triển với mục tiêu trở thành một ví điện tử dựa trên blockchain với hàng tỷ người sử dụng trên khắp thế giới. Mục tiêu của Pi là trở thành ví điện tử thông dụng như MoMo, ZaloPay, AliPay, WeChat Pay để mua bán mọi thứ hàng-hoá và dịch-vụ trong đời sống hàng ngày cả mua-bán trực-tiếp lẫn mua-bán qua Internet.
+<p>Dự án <a href="pi-network">Pi Network</a> đang phát triển với mục tiêu trở thành một ví điện tử dựa trên blockchain với hàng tỷ người sử dụng trên khắp thế giới. Mục tiêu của Pi là trở thành ví điện tử thông dụng như MoMo, ZaloPay, AliPay, WeChat Pay để mua bán mọi thứ hàng-hoá và dịch-vụ trong đời sống hàng ngày cả mua-bán trực-tiếp lẫn mua-bán qua Internet.
   <hr>
 
   <div class="footer">
