--- a/kinh-nghiem/linh-tinh/bep-2.html
+++ b/kinh-nghiem/linh-tinh/bep-2.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -243,7 +243,7 @@ https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/bep
 
 <h3>Tiết kiệm bao nhiêu?</h3>
 <p>Để biết bếp từ tiết kiệm bao nhiêu so với bếp ga, hãy bấm <a href="https://docs.google.com/spreadsheet/ccc?key=0Av98IPxo40-3dEg0S0F0WWZMX2Y1bllOTW82Tzd1N0E&amp;usp=sharing" target="_blank">vào đây</a> để mở bảng tính. Bạn hãy tự điền vào <span class="red">các ô màu đỏ</span> trong bảng tính để xem bạn <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a> được bao nhiêu với bếp điện cảm ứng, lò microwave (<em>thực ra thì dùng lò microwave còn tiết kiệm hơn con số tính được vì các món nấu bằng lò microwave cần rất ít nước so với nấu bằng các loại bếp, nên tốn ít năng lượng hơn</em>).</p>
-<p>Nếu trong nhà có dùng máy <a href="may-lanh.html">ĐHNĐ</a>, thì xem cột bên phải để biết mức độ tốn điện chạy máy lạnh và mức tiết kiệm giữa các loại bếp.</p>
+<p>Nếu trong nhà có dùng máy <a href="may-lanh">ĐHNĐ</a>, thì xem cột bên phải để biết mức độ tốn điện chạy máy lạnh và mức tiết kiệm giữa các loại bếp.</p>
 <p>Các bạn có thấy mâu thuẫn không khi dùng gas để đốt nóng trực tiếp lại đắt hơn dùng điện. Nếu là thủy điện thì không có gì mâu thuẫn cả vì giá thủy điện rất thấp. Nhưng với điện phát ra từ gas mà cũng rẻ hơn đốt gas thì thật là lạ. Đó là vì hiệu suất của nhà máy nhiệt điện <a href="https://en.wikipedia.org/wiki/Combined_cycle" target="_blank">chu trình kết hợp</a> dùng gas có thể lên đến 59%, nhân với hiệu suất 90% của bếp điện cảm ứng từ được khoảng 54%, vẫn cao hơn hiệu suất bếp gas, và nhà máy điện mua gas với giá sỉ rẻ bằng nửa gas mua lẻ.</p>
 Hiệu suất của ba loại bếp này khác nhau vì cách làm nóng thực phẩm của chúng khác nhau:
 <ul><li>bếp ga làm nóng không khí dưới đáy nồi, đáy nồi nóng lên sau, thực phẩm trong nồi nóng lên sau cùng</li>
@@ -251,7 +251,7 @@ Hiệu suất của ba loại bếp này khác nhau vì cách làm nóng thực 
 <li>lò microwave làm nóng thực phẩm, đồ đựng sẽ nóng sau thực phẩm</li></ul>
 Hiệu suất của lò microwave thấp hơn bếp điện từ do việc biến đổi điện nhà thành sóng vi ba tổn hao hơn việc biến đổi từ điện nhà thành từ trường xoay chiều ở bếp điện từ.
 <br />
-<div class="center">sang trang <a href="bep.html">1</a> - 2 - <a href="bep-3.html">3</a></div>
+<div class="center">sang trang <a href="bep">1</a> - 2 - <a href="bep-3">3</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
