--- a/kinh-nghiem/linh-tinh/bep-3.html
+++ b/kinh-nghiem/linh-tinh/bep-3.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -247,9 +247,9 @@ Nhiều người bán bếp điện từ vẫn tưởng lầm rằng nồi inox 
 <p>Không được dùng những vật dụng bằng kim loại và những vật liệu hấp thụ sóng vi ba với lò microwave. Đồ đựng bằng kim loại sẽ phản xạ sóng vi ba nên sóng khó chạm tới thực phẩm và thực phẩm nóng chậm hơn. Vật dụng kim loại có đầu nhọn còn dễ phóng tia lửa điện trong lò microwave, nếu tia lửa điện gặp dầu-mỡ trong thực phẩm sẽ phát cháy rất nguy hiểm.
 Vật liệu hấp thụ sóng vi ba sẽ nóng lên và sóng vi ba cũng không còn chạm tới thực phẩm. Trường hợp này thì thực phẩm sẽ nóng lên gián tiếp qua đồ đựng nên hiệu quả thấp. Có loại nhựa không hấp thụ sóng nhưng cũng có loại nhựa hấp thụ sóng vi ba. Để thử xem món đồ có hấp thụ sóng hay không hãy để nó vào lò cùng với một ly thuỷ tinh đựng nước, cho lò hoạt động nửa phút rồi lấy món đồ ra, nếu nó hấp thụ sóng nó sẽ hơi nóng lên. Một vài loại bình cho em bé bú sữa hấp thụ sóng vi ba, và có thể được tiệt trùng bằng cách rửa sạch rồi để trong lò hoạt động khoảng 1-2 phút.
 Thuỷ tinh, sành sứ không hấp thụ sóng vi ba nên dùng làm đồ đựng thực phẩm nấu trong lò được. <u>Chú ý</u>: khi nấu món ít nước trong lò vi ba thì nhiệt độ thực phẩm sẽ tăng rất nhanh, có thể làm nứt-vỡ đồ thuỷ tinh thường.</p>
-<p>Hãy rút hẳn dây cắm điện sau mỗi lần dùng bếp điện từ, lò microwave, hoặc các loại máy điện khác vì lượng điện tiêu thụ ở trạng thái <a href="dien-standby.html">standby</a> của những thứ đó cộng lại sẽ khá lớn.</p>
+<p>Hãy rút hẳn dây cắm điện sau mỗi lần dùng bếp điện từ, lò microwave, hoặc các loại máy điện khác vì lượng điện tiêu thụ ở trạng thái <a href="dien-standby">standby</a> của những thứ đó cộng lại sẽ khá lớn.</p>
 <p>Bạn có thể xem thêm bài về <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a>.</p>
-<div class="center">sang trang <a href="bep.html">1</a> - <a href="bep-2.html">2</a> - 3</div>
+<div class="center">sang trang <a href="bep">1</a> - <a href="bep-2">2</a> - 3</div>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
