--- a/kinh-nghiem/linh-tinh/bep.html
+++ b/kinh-nghiem/linh-tinh/bep.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -258,7 +258,7 @@ Một số dữ kiện để tính và so sánh:
 Để có được 238,08MJ với:</p>
 <ul><li>bếp điện cảm ứng thì phải tốn 73,481kWh và trong đó 26,453MJ (10%) làm nóng không khí;</li>
 <li>với lò microwave thì phải tốn 94,48kWh và trong đó 102,03MJ (30%) làm nóng không khí.</li></ul>
-<div class="center"> sang trang 1 - <a href="bep-2.html">2</a> - <a href="bep-3.html">3</a></div>
+<div class="center"> sang trang 1 - <a href="bep-2">2</a> - <a href="bep-3">3</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
