--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -168,30 +168,21 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
       <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
-
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
-
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
-
       <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
-
       <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
-
   <h3 class="myheader">Kinh-nghiệm</h3>
     <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
-
     <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
-
     <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
-
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
-
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -230,17 +221,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='/kinh-nghiem/linh-tinh/bep.html'>Bếp</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/ac-dc.html'>Điện một chiều và điện xoay chiều</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/tieu-thu-dien.html'>Tiêu thụ điện</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/dien-standby.html'>Điện standby</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/magchan.html'>Dùng thử Magchan để giặt</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh.html'>Máy lạnh</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh-inverter.html'>Máy lạnh inverter</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nong.html'>Nóng</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nhiet-do.html'>Nhiệt độ một ngày</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv.html'>Tần số của TV</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/hong-ngoai.html'>Hồng ngoại</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/bep'>Bếp</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Tiêu thụ điện</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh'>Máy lạnh</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/nong'>Nóng</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ một ngày</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Hồng ngoại</a></dt>
 </dl>
   <hr>
 
