--- a/kinh-nghiem/linh-tinh/may-lanh-3.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-3.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -290,7 +290,7 @@ data-ad-slot="3830899615">
 </p>
 <p>Rất may là tôi chỉ cần đặt một giàn nóng máy lạnh trong khoang này nên có thể chia đôi khoảng lá sách, nếu có hai giàn nóng ở đó thì vô kế khả thi.</p>
 </div>
-<div class="center">sang trang <a href="may-lanh.html">1</a> - <a href="may-lanh-2.html">2</a> - 3</div>
+<div class="center">sang trang <a href="may-lanh">1</a> - <a href="may-lanh-2">2</a> - 3</div>
 
   <hr>
 
