--- a/kinh-nghiem/linh-tinh/may-lanh-inverter.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-inverter.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -242,7 +242,7 @@ https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh-inverter
   </div>
 
 <h3>Máy lạnh inverter tiết kiệm điện bằng cách nào?</h3>
-<p>Các hãng sản xuất vẫn quảng cáo là máy lạnh inverter <a href="/huu-ich/chi-tieu.html">tiết kiệm</a> đến vài chục % tiền điện so với máy lạnh thường.</p>
+<p>Các hãng sản xuất vẫn quảng cáo là máy lạnh inverter <a href="/huu-ich/chi-tieu">tiết kiệm</a> đến vài chục % tiền điện so với máy lạnh thường.</p>
 <p>Trong mỗi máy lạnh (loại 1 cục hay 2 cục, loại inverter hay loại thường đều như nhau) có 4 cái động cơ chính là động cơ nén, quạt làm mát dàn nóng, quạt đối lưu trong phòng và động cơ đảo hướng gió. Quạt đối lưu trong phòng thì quay không ngừng trong suốt thời gian dùng máy lạnh, theo tốc độ mà người dùng máy chọn (hoặc khi nhanh khi chậm trong chế độ auto). Động cơ đảo hướng gió thì ngừng hay chạy tùy theo người dùng chọn. Động cơ nén và quạt làm mát dàn nóng thì chạy hay nghỉ cùng lúc. Động cơ nén của máy lạnh loại thường sẽ chạy theo kiểu đóng/mở, tức là chạy ở công suất tối đa hoặc không chạy.</p>
 <p>Trong 4 động cơ đó, động cơ nén dùng nhiều điện nhất. Việc tiết kiệm điện tập trung vào chỗ này.</p>
 <!-- AMP In-article 1 -->
@@ -280,7 +280,7 @@ data-ad-slot="3830899615">
 <li>khoảng chục phút sau, nhiệt độ trong phòng tăng lên 25℃, động cơ nén sẽ chạy lại ở công suất tối đa khoảng vài phút đến khi nhiệt độ trong phòng xuống đến 23℃ rồi nó nghỉ,</li>
 <li>việc trên cứ lặp đi lặp lại</li>
 <li>thời gian động cơ nén nghỉ và chạy có thể thay đổi tùy theo nhiệt độ thực tế trong phòng.</li>
-<li>nếu vì lý do gì đó <a href="nhiet-do.html">nhiệt độ</a> trong phòng xuống dưới 24℃ (ví dụ lúc 3-5 giờ sáng) thì động cơ nén ngừng hẳn</li></ul>
+<li>nếu vì lý do gì đó <a href="nhiet-do">nhiệt độ</a> trong phòng xuống dưới 24℃ (ví dụ lúc 3-5 giờ sáng) thì động cơ nén ngừng hẳn</li></ul>
 <p>Bây giờ thay máy lạnh thường bằng máy lạnh inverter thì:</p>
 <ul><li>nhiệt độ ngoài trời là 28℃, chọn nhiệt độ 24℃ cho máy lạnh,</li>
 <li>động cơ nén sẽ chạy liên tục ở công suất tối đa đến khi nhiệt độ trong phòng xuống đến 24℃ rồi nó giảm công suất xuống, chỉ chạy ở một công suất đủ để làm mát bù cho lượng nhiệt sinh ra trong phòng và lượng nhiệt từ ngoài phòng truyền vào qua tường, cửa. Công suất đó có thể tăng hay giảm tùy theo nhiệt độ thực tế trong phòng cao hơn 24℃ nhiều hay ít</li>
@@ -288,8 +288,8 @@ data-ad-slot="3830899615">
 <div><amp-img src="/images/inverter.gif" width="383" height="196" layout="responsive"></amp-img>
 </div>
 <p>Như vậy sự khác nhau giữa 2 loại máy lạnh là thời gian chạy và công suất chạy. Máy lạnh thường thì có công suất không đổi nhưng thời gian chạy thì không liên tục. Máy lạnh inverter thì thay đổi công suất nhưng thời gian chạy thì liên tục.</p>
-<p>Theo wiki thì mạch điện inverter chỉ giúp tiết kiệm điện khi máy lạnh inverter chạy dưới công suất tối đa và máy lạnh inverter tiết kiệm điện hơn loại máy thường do nó dùng loại bơm nhiệt với chất làm lạnh R410A có áp suất hoá lỏng và hiệu suất cao hơn loại R22 trong máy lạnh thường. Như vậy nếu dùng máy lạnh inverter trong tình trạng thiếu công suất thì không tiết kiệm nhiều. Ví dụ <a href="nong.html">nhiệt lượng truyền vào phòng</a> trong buổi trưa gần 3kW mà gắn máy lạnh inverter 9000Btu/h thì không tiết kiệm được nhiều điện so với máy lạnh thường.</p>
-<p>Xem thêm trang <a href="https://en.wikipedia.org/wiki/Inverter_(air_conditioning)" target="_blank">wikipedia</a> và trang web về <a href="nong.html">nóng</a> và <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a>.</p>
+<p>Theo wiki thì mạch điện inverter chỉ giúp tiết kiệm điện khi máy lạnh inverter chạy dưới công suất tối đa và máy lạnh inverter tiết kiệm điện hơn loại máy thường do nó dùng loại bơm nhiệt với chất làm lạnh R410A có áp suất hoá lỏng và hiệu suất cao hơn loại R22 trong máy lạnh thường. Như vậy nếu dùng máy lạnh inverter trong tình trạng thiếu công suất thì không tiết kiệm nhiều. Ví dụ <a href="nong">nhiệt lượng truyền vào phòng</a> trong buổi trưa gần 3kW mà gắn máy lạnh inverter 9000Btu/h thì không tiết kiệm được nhiều điện so với máy lạnh thường.</p>
+<p>Xem thêm trang <a href="https://en.wikipedia.org/wiki/Inverter_(air_conditioning)" target="_blank">wikipedia</a> và trang web về <a href="nong">nóng</a> và <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
