--- a/kinh-nghiem/linh-tinh/may-lanh.html
+++ b/kinh-nghiem/linh-tinh/may-lanh.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -243,7 +243,7 @@ https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh
 
 <h3>Máy lạnh là cái gì?</h3>
 <p>Máy điều hoà nhiệt độ là một cái <a href="https://en.wikipedia.org/wiki/Air_conditioner" target="_blank">bơm nhiệt</a>. Nó <i>bơm</i> nhiệt từ nơi có nhiệt độ thấp (nguồn nhiệt) sang nơi có nhiệt độ cao (nơi thoát nhiệt), ngược lại với sự truyền nhiệt tự nhiên, tương tự như máy <i>bơm</i> nước từ thấp lên cao.</p>
-<p>Ở những vùng khí hậu <a href="nong.html">nóng</a> quanh năm như miền Nam Việt Nam thì máy ĐHNĐ chỉ bơm nhiệt theo một chiều duy nhất là từ trong nhà ra ngoài trời, nên thường gọi là <i>máy lạnh</i>. Ở miền Bắc Việt Nam, máy ĐHNĐ bơm nhiệt theo hai chiều: mùa hè bơm nhiệt từ trong nhà ra ngoài trời, mùa đông bơm nhiệt từ ngoài trời vào trong nhà.</p>
+<p>Ở những vùng khí hậu <a href="nong">nóng</a> quanh năm như miền Nam Việt Nam thì máy ĐHNĐ chỉ bơm nhiệt theo một chiều duy nhất là từ trong nhà ra ngoài trời, nên thường gọi là <i>máy lạnh</i>. Ở miền Bắc Việt Nam, máy ĐHNĐ bơm nhiệt theo hai chiều: mùa hè bơm nhiệt từ trong nhà ra ngoài trời, mùa đông bơm nhiệt từ ngoài trời vào trong nhà.</p>
 <h4>Giới hạn</h4>
 <p>Máy ĐHNĐ chỉ làm việc được khi nơi thoát nhiệt không nóng hơn 48℃ và nguồn nhiệt không lạnh hơn 5℃; vượt quá giới hạn đó thì máy ĐHNĐ không bơm nhiệt được. Như vậy, mở máy lạnh khi ngoài trời nóng khoảng 48℃ thì chỉ tốn điện vô ích. Tương tự, nếu nhiệt độ ngoài trời trong mùa đông thấp hơn 5℃ thì mở máy ĐHNĐ cũng vô ích. Một số máy ĐHNĐ sẽ tự động ngừng làm việc khi phát hiện ra tình trạng quá giới hạn đó. Có khi nhiệt độ không khí ngoài trời chưa tới 48℃ nhưng giàn nóng bị nắng rọi hoặc không đủ thoáng để thoát hơi nên nóng lên, do đó nên che nắng và thoát hơi cho giàn nóng.</p>
 <h4>Công suất và hiệu suất</h4>
@@ -278,12 +278,12 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <h4>Máy lạnh inverter</h4>
-<p>Các máy lạnh đời mới có mạch điện inverter, để điều chỉnh giảm được công suất, tạo cảm giác dễ chịu cho người dùng. Nhờ giảm được công suất nên khi đã đạt đến nhiệt độ đã chọn trước, máy lạnh <a href="may-lanh-inverter.html">inverter</a> sẽ tự giảm công suất sao cho lượng nhiệt bơm ra ngoài đúng bằng lượng nhiệt truyền vào phòng và sinh ra trong phòng, như vậy nhiệt độ trong phòng sẽ không thay đổi, rất dễ chịu cho người dùng. Còn loại máy lạnh thường sẽ ngưng bơm khi đã đạt đến nhiệt độ đã chọn, và lượng nhiệt bên ngoài truyền vào phòng cũng như sinh ra trong phòng sẽ làm nhiệt độ trong phòng tăng lên từ từ; khi nhiệt độ tăng cao hơn nhiệt độ đã chọn 1 độ, máy lạnh sẽ bắt đầu bơm nhiệt trở lại với công suất cố định của nó; vậy là nhiệt độ trong phòng sẽ lên xuống đều đặn quanh nhiệt độ đã chọn. Mặc dù nhiệt độ trong phòng chỉ thay đổi có 1 độ, nhưng những người nhạy cảm cũng sẽ cảm thấy không dễ chịu lắm.</p>
+<p>Các máy lạnh đời mới có mạch điện inverter, để điều chỉnh giảm được công suất, tạo cảm giác dễ chịu cho người dùng. Nhờ giảm được công suất nên khi đã đạt đến nhiệt độ đã chọn trước, máy lạnh <a href="may-lanh-inverter">inverter</a> sẽ tự giảm công suất sao cho lượng nhiệt bơm ra ngoài đúng bằng lượng nhiệt truyền vào phòng và sinh ra trong phòng, như vậy nhiệt độ trong phòng sẽ không thay đổi, rất dễ chịu cho người dùng. Còn loại máy lạnh thường sẽ ngưng bơm khi đã đạt đến nhiệt độ đã chọn, và lượng nhiệt bên ngoài truyền vào phòng cũng như sinh ra trong phòng sẽ làm nhiệt độ trong phòng tăng lên từ từ; khi nhiệt độ tăng cao hơn nhiệt độ đã chọn 1 độ, máy lạnh sẽ bắt đầu bơm nhiệt trở lại với công suất cố định của nó; vậy là nhiệt độ trong phòng sẽ lên xuống đều đặn quanh nhiệt độ đã chọn. Mặc dù nhiệt độ trong phòng chỉ thay đổi có 1 độ, nhưng những người nhạy cảm cũng sẽ cảm thấy không dễ chịu lắm.</p>
 <h4>Làm khô không khí</h4>
-<p>Một tác dụng phụ của máy lạnh là làm giảm độ ẩm không khí trong phòng, làm cho người cảm thấy dễ chịu hơn. Độ ẩm tương đối thích hợp cho người ở trong khoảng 30% tới 60%. Hầu hết các máy lạnh thời nay đều có chế độ làm khô không khí. Tuy nó thật sự làm giảm lượng hơi nước trong không khí nhưng nó không có bộ phận đo độ ẩm không khí, không có cách kiểm soát độ ẩm tương đối. Do đó nó chỉ làm việc theo một chu trình cố định là chạy máy bơm trong vài phút rồi ngừng bơm trong vài phút. Trong những phút máy bơm chạy, hơi nước trong không khí được làm lạnh trong máy sẽ ngưng tụ lại và chảy ra khỏi phòng theo ống dẫn. Tỉ lệ giữa thời gian chạy và thời gian ngừng máy bơm thay đổi theo nhiệt độ người dùng chọn trên bộ điều khiển từ xa. Với một <a href="nhiet-do.html">ẩm kế</a> rẻ tiền của Trung Quốc (ẩm kế và nhiệt kế chỉ kim, vỏ nhựa, giá 50.000₫), ta có thể dễ dàng thấy tác dụng phụ của máy lạnh. Độ ẩm tương đối trong mùa mưa ở Sài Gòn thay đổi trong khoảng 65% vào lúc trưa nắng tới 100% vào lúc sáng sớm. <br />
+<p>Một tác dụng phụ của máy lạnh là làm giảm độ ẩm không khí trong phòng, làm cho người cảm thấy dễ chịu hơn. Độ ẩm tương đối thích hợp cho người ở trong khoảng 30% tới 60%. Hầu hết các máy lạnh thời nay đều có chế độ làm khô không khí. Tuy nó thật sự làm giảm lượng hơi nước trong không khí nhưng nó không có bộ phận đo độ ẩm không khí, không có cách kiểm soát độ ẩm tương đối. Do đó nó chỉ làm việc theo một chu trình cố định là chạy máy bơm trong vài phút rồi ngừng bơm trong vài phút. Trong những phút máy bơm chạy, hơi nước trong không khí được làm lạnh trong máy sẽ ngưng tụ lại và chảy ra khỏi phòng theo ống dẫn. Tỉ lệ giữa thời gian chạy và thời gian ngừng máy bơm thay đổi theo nhiệt độ người dùng chọn trên bộ điều khiển từ xa. Với một <a href="nhiet-do">ẩm kế</a> rẻ tiền của Trung Quốc (ẩm kế và nhiệt kế chỉ kim, vỏ nhựa, giá 50.000₫), ta có thể dễ dàng thấy tác dụng phụ của máy lạnh. Độ ẩm tương đối trong mùa mưa ở Sài Gòn thay đổi trong khoảng 65% vào lúc trưa nắng tới 100% vào lúc sáng sớm. <br />
 Trong giờ làm việc buổi sáng, độ ẩm tương đối ngoài trời khoảng hơn 70%, trong phòng làm việc có nhiều người và máy tính toả nhiệt nên máy lạnh chạy liên tục và nhiệt độ trong phòng khoảng 26-28℃, độ ẩm khoảng 45-60%. <br />
 Sau 10 giờ tối, độ ẩm tương đối ngoài trời khoảng 80%, máy lạnh chạy chế độ làm khô không khí trong phòng chỉ làm giảm độ ẩm xuống khoảng 70%.</p>
-<div class="center">sang trang 1 - <a href="may-lanh-2.html">2</a> - <a href="may-lanh-3.html">3</a></div>
+<div class="center">sang trang 1 - <a href="may-lanh-2">2</a> - <a href="may-lanh-3">3</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
