--- a/kinh-nghiem/linh-tinh/tieu-thu-dien.html
+++ b/kinh-nghiem/linh-tinh/tieu-thu-dien.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -242,7 +242,7 @@ https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/tieu-thu-dien
   </div>
 
 <h3>Công suất tiêu thụ điện một số máy nhỏ thường gặp</h3>
-<p>Mới mua một máy đo công suất để đo thử mức tiêu thụ điện trong nhà, nhất là ở tình trạng <a href="dien-standby.html">stand-by</a>.</p>
+<p>Mới mua một máy đo công suất để đo thử mức tiêu thụ điện trong nhà, nhất là ở tình trạng <a href="dien-standby">stand-by</a>.</p>
 <div>
 <table class="withborder">
 <tbody>
@@ -482,7 +482,7 @@ Nhãn ghi Input 240VAC/100mA, Output 12VDC/1A.</td>
 <td>87</td>
 <td>19,14</td>
 <td>167,67</td>
-<td rowspan="2">Dùng làm <a href="../may-tinh/toys.html">server</a>.<br />
+<td rowspan="2">Dùng làm <a href="../may-tinh/toys">server</a>.<br />
 Nhãn HD ghi 5V/12V 600mA/900mA!</td>
 </tr>
 <tr>
