--- a/kinh-nghiem/chu-viet/index.html
+++ b/kinh-nghiem/chu-viet/index.html
@@ -170,30 +170,23 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
       <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
-
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
-
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
-
       <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
-
       <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
 
   <h3 class="myheader">Kinh-nghiệm</h3>
     <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
-
     <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
-
     <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
-
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -232,10 +225,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html'>Vị-trí dấu-thanh</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/unicode.html'>Unicode</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/utf-8.html'>UTF-8</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/web.html'>Web Việt</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1'>Vị-trí dấu-thanh</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/unicode'>Unicode</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/utf-8'>UTF-8</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/web'>Web Việt</a></dt>
 </dl>
   <hr>
 
