--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ data-ad-slot="5275186684">
 
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
-          <a href="kinh-nghiem/may-tinh/privcloudstor"><amp-img src="images/Nextcloud.png" layout="responsive" height="233" width="350" alt="Nextcloud"></amp-img></a>
+          <a href="kinh-nghiem/may-tinh/privcloudstor"><amp-img src="images/Nextcloud_ex.png" layout="responsive" height="233" width="350" alt="Nextcloud"></amp-img></a>
           <div class="center"><h2>Tự làm cloud storage server</h2></div>
           <p>Dùng một máy-tính cũ và yếu làm một <a href="kinh-nghiem/may-tinh/privcloudstor">cloud storage server</a> cho cá-nhân hoặc nhóm ít người như gia-đình với dung-lượng-lưu-trữ tuỳ theo nhu-cầu, từ vài trăm GB trở lên đến vài TB.
           </p>
@@ -370,7 +370,7 @@ data-ad-slot="5275186684">
 
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
-          <a href="kinh-nghiem/may-tinh/pi-network"><amp-img src="images/pi-networks.jpg" layout="responsive" width="350" height="233" alt="Pi"></amp-img></a>
+          <a href="kinh-nghiem/may-tinh/pi-network"><amp-img src="images/pi-network_ex.jpg" layout="responsive" width="350" height="233" alt="Pi"></amp-img></a>
           <div class="center"><h2>Tiền-mật-mã Pi</h2></div>
           <p>Bài <strong><span class="red">MỚI</span></strong>: Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">tiền-mật-mã cho mọi người: Pi</a>.
           <br>Một loại tiền-mật-mã mà mọi người trên toàn thế-giới đều dùng được một cách dễ-dàng.
