--- a/home/about.html
+++ b/home/about.html
@@ -16,8 +16,9 @@
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-
-<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2242556057278004"
+     crossorigin="anonymous"></script>
+<!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 <!--
@@ -204,8 +205,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       </button>
     </div>
   </div>
+  <!-- AMP Responsive Skyscrapper
   <div class="leftads">
-  <!-- AMP Responsive Skyscrapper -->
 <amp-ad
 media="(min-width: 1260px)"
 layout="fill"
@@ -213,10 +214,10 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="5275186684">
 </amp-ad>
-
   </div>
+ -->
+  <!-- AMP Responsive Skyscrapper
   <div class="rightads">
-  <!-- AMP Responsive Skyscrapper -->
 <amp-ad
 media="(min-width: 1260px)"
 layout="fill"
@@ -226,6 +227,7 @@ data-ad-slot="5275186684">
 </amp-ad>
 
   </div>
+ -->
 <div class="body">
   <div class="title">Thân-thế</div>
 
@@ -329,7 +331,7 @@ https://www.lhboi.name.vn/home/about
   </tbody>
   </table>
 
-<!-- AMP In-article 1 -->
+<!-- AMP In-article 1
 <amp-ad
 media="(max-width: 399px)"
 height=280
@@ -354,6 +356,7 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad> 
+ -->
   <hr>
 
   <div class="footer">
