--- a/home/about.html
+++ b/home/about.html
@@ -17,8 +17,7 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
-<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
-<!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 <!--
@@ -159,9 +158,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <body>
   <!-- top of body -->
-  <amp-auto-ads type="adsense"
-    data-ad-client="ca-pub-2242556057278004">
-  </amp-auto-ads>  
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
             <button on="tap:sidebar.close" class="close-sidebar">
@@ -207,7 +203,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       </button>
     </div>
   </div>
-  <!-- AMP Responsive Skyscrapper
+  <!-- AMP Responsive Skyscrapper -->
   <div class="leftads">
 <amp-ad
 media="(min-width: 1260px)"
@@ -217,8 +213,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="5275186684">
 </amp-ad>
   </div>
- -->
-  <!-- AMP Responsive Skyscrapper
+  <!-- AMP Responsive Skyscrapper -->
   <div class="rightads">
 <amp-ad
 media="(min-width: 1260px)"
@@ -227,9 +222,8 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="5275186684">
 </amp-ad>
-
   </div>
- -->
+    
 <div class="body">
   <div class="title">Thân-thế</div>
 
@@ -333,7 +327,7 @@ https://www.lhboi.name.vn/home/about
   </tbody>
   </table>
 
-<!-- AMP In-article 1
+<!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
 height=280
@@ -358,7 +352,7 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad> 
- -->
+
   <hr>
 
   <div class="footer">
