--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
-
+<style amp-custom>
+statcounter {width: 1px;height:1px;}
+</style>
 <!--
   Import the `amp-sidebar` component.
 -->
@@ -434,7 +436,10 @@ data-ad-slot="3830899615">
   }
   </script>
 </amp-analytics>
-
+<div id="statcounter">
+<amp-pixel src="https://c.statcounter.com/12598906/0/9a8e736a/1/">
+</amp-pixel>
+</div>
 </main>
 </body>
 </html>
