--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 <style amp-custom>
-statcounter {width: 1px;height:1px;}
+statcounter {width: 10px;height:10px;}
 </style>
 <!--
   Import the `amp-sidebar` component.
@@ -408,7 +408,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
   <hr>
-
+Hit counter <amp-img width="100" height="30" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
