--- a/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
+++ b/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
@@ -388,7 +388,7 @@ Các bài liên quan:
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
