--- a/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
+++ b/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
@@ -372,7 +372,7 @@ Các bài liên quan:
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132812623890673664" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/400359176796363" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
