--- a/kinh-nghiem/linh-tinh/hong-ngoai.html
+++ b/kinh-nghiem/linh-tinh/hong-ngoai.html
@@ -279,7 +279,7 @@ data-ad-slot="3830899615">
 <p>Không cần chờ đến tối vẫn có thể thu được hình hồng ngoại bằng cách gắn trước ống kính một kính lọc chỉ cho tia hồng ngoại đi qua và ngăn ánh sáng thấy được. Có thể làm một kính lọc như vậy một cách rẻ tiền từ những đoạn đầu cuộn phim chụp hình đã tráng. Đoạn đầu cuộn phim thường có một vài khung không lộ sáng do người dùng cố ý bấm máy mà không mở ống kính để bỏ đoạn đầu. Sau khi tráng, đoạn đầu đó sẽ có màu đen, không cho ánh sáng thấy được đi qua nhưng lại cho tia hồng ngoại đi qua.</p>
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
