--- a/kinh-nghiem/linh-tinh/may-lanh-2.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-2.html
@@ -337,7 +337,7 @@ Về mặt độ cao thì loại máy lạnh tủ đứng là hợp lý nhất.<
 <div class="center">sang trang <a href="may-lanh">1</a> - 2 - <a href="may-lanh-3">3</a></div>
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
