--- a/kinh-nghiem/may-tinh/googlemaps.html
+++ b/kinh-nghiem/may-tinh/googlemaps.html
@@ -361,7 +361,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
