--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -511,7 +511,7 @@ Tài-liệu tham-khảo:
 <br>* <a href="https://www.reddit.com/r/PiNetwork/wiki/pi-wiki" target='_blank'>Reddit Pi Network</a>
 <br>Mọi ý-kiến thảo-luận xin ghi vào các trang: <a href="https://www.facebook.com/lamgiauchacchan/posts/1819584918207108" rel="nofollow" target="_blank">Facebook</a></div>
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
