--- a/kinh-nghiem/may-tinh/privcloudstor.html
+++ b/kinh-nghiem/may-tinh/privcloudstor.html
@@ -598,7 +598,7 @@ Nếu không tìm được một máy laptop cũ để làm cloud storage server
 
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
